Refactor fishbone section with new cause functions

--- a/index.html
+++ b/index.html
@@ -109,16 +109,50 @@
     </div>
 
     <!-- FISHBONE -->
-    <div class="tab-content" id="tab-fishbone">
-      <div class="fishbone-grid">
-        <div class="fishbone-card"><h4>People</h4><ul id="fish-people"></ul><button onclick="addListItem('fish-people')">+ Add cause</button></div>
-        <div class="fishbone-card"><h4>Process</h4><ul id="fish-process"></ul><button onclick="addListItem('fish-process')">+ Add cause</button></div>
-        <div class="fishbone-card"><h4>Product</h4><ul id="fish-product"></ul><button onclick="addListItem('fish-product')">+ Add cause</button></div>
-        <div class="fishbone-card"><h4>Procedure</h4><ul id="fish-procedure"></ul><button onclick="addListItem('fish-procedure')">+ Add cause</button></div>
-        <div class="fishbone-card"><h4>Policy</h4><ul id="fish-policy"></ul><button onclick="addListItem('fish-policy')">+ Add cause</button></div>
-        <div class="fishbone-card"><h4>Place</h4><ul id="fish-place"></ul><button onclick="addListItem('fish-place')">+ Add cause</button></div>
-      </div>
+    <!-- TAB 2 : FISHBONE -->
+<div class="tab-content" id="tab-fishbone">
+
+  <div class="fishbone-grid">
+
+    <div class="fishbone-card">
+      <h4>People</h4>
+      <ul id="fish-people" class="cause-list"></ul>
+      <button onclick="addFishboneCause('fish-people')">+ Add cause</button>
     </div>
+
+    <div class="fishbone-card">
+      <h4>Process</h4>
+      <ul id="fish-process" class="cause-list"></ul>
+      <button onclick="addFishboneCause('fish-process')">+ Add cause</button>
+    </div>
+
+    <div class="fishbone-card">
+      <h4>Product</h4>
+      <ul id="fish-product" class="cause-list"></ul>
+      <button onclick="addFishboneCause('fish-product')">+ Add cause</button>
+    </div>
+
+    <div class="fishbone-card">
+      <h4>Procedure</h4>
+      <ul id="fish-procedure" class="cause-list"></ul>
+      <button onclick="addFishboneCause('fish-procedure')">+ Add cause</button>
+    </div>
+
+    <div class="fishbone-card">
+      <h4>Policy</h4>
+      <ul id="fish-policy" class="cause-list"></ul>
+      <button onclick="addFishboneCause('fish-policy')">+ Add cause</button>
+    </div>
+
+    <div class="fishbone-card">
+      <h4>Place</h4>
+      <ul id="fish-place" class="cause-list"></ul>
+      <button onclick="addFishboneCause('fish-place')">+ Add cause</button>
+    </div>
+
+  </div>
+</div>
+
 
     <!-- FACTORS -->
     <div class="tab-content" id="tab-factors">
