--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <!-- LEFT PANEL -->
 <div class="left-panel">
 
-<!-- SECTION 1 -->
-<section class="section open completed" data-section="case_information">
+<section class="section open" data-section="case_information">
   <div class="section-header" onclick="toggleSection(this)">
     <span class="step">1</span><h2>Case Information</h2>
   </div>
@@ -39,7 +38,6 @@
   </div>
 </section>
 
-<!-- SECTION 2 -->
 <section class="section" data-section="incident">
   <div class="section-header" onclick="toggleSection(this)">
     <span class="step">2</span><h2>Incident / Problem Description (5W2H)</h2>
@@ -68,23 +66,19 @@
   </div>
 </section>
 
-<!-- SECTION 3 -->
 <section class="section" data-section="immediate_actions">
   <div class="section-header" onclick="toggleSection(this)">
     <span class="step">3</span><h2>Immediate Actions</h2>
   </div>
   <div class="section-body">
     <table id="immediateActions">
-      <thead>
-        <tr><th>Action</th><th>Owner</th><th>Due</th></tr>
-      </thead>
+      <thead><tr><th>Action</th><th>Owner</th><th>Due</th></tr></thead>
       <tbody></tbody>
     </table>
     <button onclick="addRow('immediateActions')">+ Add Action</button>
   </div>
 </section>
 
-<!-- SECTION 4 -->
 <section class="section" data-section="investigation">
   <div class="section-header" onclick="toggleSection(this)">
     <span class="step">4</span><h2>Investigation & Analysis</h2>
@@ -93,13 +87,12 @@
   <div class="section-body">
 
     <div class="tabs">
-      <button class="tab active" onclick="openTab(event,'tab-tasks')">Investigation Tasks</button>
+      <button class="tab active" onclick="openTab(event,'tab-tasks')">Tasks</button>
       <button class="tab" onclick="openTab(event,'tab-fishbone')">Fishbone</button>
       <button class="tab" onclick="openTab(event,'tab-factors')">Factors</button>
       <button class="tab" onclick="openTab(event,'tab-why')">5 Whys</button>
     </div>
 
-    <!-- TASKS -->
     <div class="tab-content active" id="tab-tasks">
       <table id="investigationTasks">
         <thead><tr><th>Item</th><th>Owner</th><th>Due</th></tr></thead>
@@ -108,53 +101,17 @@
       <button onclick="addRow('investigationTasks')">+ Add Task</button>
     </div>
 
-    <!-- FISHBONE -->
-    <!-- TAB 2 : FISHBONE -->
-<div class="tab-content" id="tab-fishbone">
-
-  <div class="fishbone-grid">
-
-    <div class="fishbone-card">
-      <h4>People</h4>
-      <ul id="fish-people" class="cause-list"></ul>
-      <button onclick="addFishboneCause('fish-people')">+ Add cause</button>
+    <div class="tab-content" id="tab-fishbone">
+      <div class="fishbone-grid">
+        <div class="fishbone-card"><h4>People</h4><ul id="fish-people"></ul><button onclick="addFishboneCause('fish-people')">+</button></div>
+        <div class="fishbone-card"><h4>Process</h4><ul id="fish-process"></ul><button onclick="addFishboneCause('fish-process')">+</button></div>
+        <div class="fishbone-card"><h4>Product</h4><ul id="fish-product"></ul><button onclick="addFishboneCause('fish-product')">+</button></div>
+        <div class="fishbone-card"><h4>Procedure</h4><ul id="fish-procedure"></ul><button onclick="addFishboneCause('fish-procedure')">+</button></div>
+        <div class="fishbone-card"><h4>Policy</h4><ul id="fish-policy"></ul><button onclick="addFishboneCause('fish-policy')">+</button></div>
+        <div class="fishbone-card"><h4>Place</h4><ul id="fish-place"></ul><button onclick="addFishboneCause('fish-place')">+</button></div>
+      </div>
     </div>
 
-    <div class="fishbone-card">
-      <h4>Process</h4>
-      <ul id="fish-process" class="cause-list"></ul>
-      <button onclick="addFishboneCause('fish-process')">+ Add cause</button>
-    </div>
-
-    <div class="fishbone-card">
-      <h4>Product</h4>
-      <ul id="fish-product" class="cause-list"></ul>
-      <button onclick="addFishboneCause('fish-product')">+ Add cause</button>
-    </div>
-
-    <div class="fishbone-card">
-      <h4>Procedure</h4>
-      <ul id="fish-procedure" class="cause-list"></ul>
-      <button onclick="addFishboneCause('fish-procedure')">+ Add cause</button>
-    </div>
-
-    <div class="fishbone-card">
-      <h4>Policy</h4>
-      <ul id="fish-policy" class="cause-list"></ul>
-      <button onclick="addFishboneCause('fish-policy')">+ Add cause</button>
-    </div>
-
-    <div class="fishbone-card">
-      <h4>Place</h4>
-      <ul id="fish-place" class="cause-list"></ul>
-      <button onclick="addFishboneCause('fish-place')">+ Add cause</button>
-    </div>
-
-  </div>
-</div>
-
-
-    <!-- FACTORS -->
     <div class="tab-content" id="tab-factors">
       <table id="factorTable">
         <thead><tr><th>Factor</th><th>Expected</th><th>Actual</th><th>Relevant</th></tr></thead>
@@ -163,7 +120,6 @@
       <button onclick="addRow('factorTable')">+ Add Factor</button>
     </div>
 
-    <!-- 5 WHYS -->
     <div class="tab-content" id="tab-why">
       <div id="fiveWhyContainer"></div>
       <button onclick="addWhyChain()">+ Add 5-Why Chain</button>
@@ -172,7 +128,6 @@
   </div>
 </section>
 
-<!-- SECTION 5 -->
 <section class="section" data-section="corrective_actions">
   <div class="section-header" onclick="toggleSection(this)">
     <span class="step">5</span><h2>Corrective & Preventive Actions</h2>
@@ -190,15 +145,9 @@
 
 <!-- RIGHT PANEL -->
 <div class="right-panel">
-
-  <div id="caseStatus" class="case-status in-progress">
-    Status: In Progress
-  </div>
-
-  <h3>AI Decision Support</h3>
+  <div id="caseStatus" class="case-status new">Status: New</div>
   <button onclick="runAI()">Request AI Decision Support</button>
-
-  <h4>Payload Preview (JSON)</h4>
+  <h4>Payload Preview</h4>
   <textarea id="jsonPreview" rows="20" readonly></textarea>
 </div>
 
